[project]
name = "weather-agent"
version = "0.1.0"
description = "A weather-reporting Chat Plot agent image."
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["axes-client>=0.2"]

[tool.uv.sources]
# Temporary: pull axes-client 0.2 from GitHub until it's published to PyPI.
axes-client = { git = "ssh://git@github.com/Roker-Research/axes-client.git", branch = "main" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent"]

[dependency-groups]
dev = ["ruff>=0.6", "mypy>=1.10"]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
strict = true
files = ["src"]
mypy_path = "src"
